Fix contrast

--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
   --shadow: rgba(0, 0, 0, 0.25);
   --confirm: #10bd58;
   --invalid: #e40535;
-  --warning: #c05c0b;
+  --warning: #b5570b;
   --background: #f0f0f0;
   --content-margin: 1rem;
   --header-font: Garamond, Georgia, Baskerville, 'Baskerville Old Face', 'Hoefler Text', 'Times New Roman', serif;
